--- a/beamerthemecambridge.sty
+++ b/beamerthemecambridge.sty
@@ -6,6 +6,7 @@
 
 \useinnertheme{cambridge}
 \useoutertheme{cambridge}
+%\usecolortheme{cambridge}
 \usecolortheme[base=\the@base]{cambridge}
 %\usefonttheme{cambridge}
 
