--- a/beamerouterthemecambridge.sty
+++ b/beamerouterthemecambridge.sty
@@ -16,7 +16,7 @@
 \setbeamercolor{progress}{fg=structure.fg!50}
 
 % The University logo
-\pgfdeclareimage[height=1.5\cam@outer@pitch]{beamerlogocambridge}{uc-rev-cmyk}
+\pgfdeclareimage[height=3.5\cam@outer@pitch]{beamerlogocambridge}{uc-rev-cmyk.eps}
 
 \mode<presentation>
 
